<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_theory">

    <fragment
        android:id="@+id/navigation_theory"
        android:name="com.ruege.mobile.ui.theory.TheoryFragment"
        android:label="@string/theory"
        tools:layout="@layout/fragment_theory" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.ruege.mobile.ui.fragment.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.ruege.mobile.ui.tests.TestsFragment"
        android:label="@string/tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.ruege.mobile.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
        
    <fragment
        android:id="@+id/navigation_variants"
        android:name="com.ruege.mobile.ui.variants.VariantsFragment"
        android:label="Варианты"
        tools:layout="@layout/fragment_variants" />
        
    <fragment
        android:id="@+id/navigation_practice_statistics"
        android:name="com.ruege.mobile.ui.fragment.PracticeStatisticsFragment"
        android:label="@string/practice_statistics"
        tools:layout="@layout/fragment_practice_statistics">
        
        <action
            android:id="@+id/action_practice_statistics_to_task_detail"
            app:destination="@id/navigation_task_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_task_detail"
        android:name="com.ruege.mobile.ui.fragment.TaskDetailFragment"
        android:label="@string/task_detail"
        tools:layout="@layout/fragment_task_detail">
        
        <argument
            android:name="taskId"
            app:argType="integer" />
    </fragment>
</navigation> 